[BUG FIX]: Fixed mobile menu being stuck to edge of page

--- a/src/components/MobileMenu/MobileMenu.css
+++ b/src/components/MobileMenu/MobileMenu.css
@@ -16,6 +16,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    padding: 20px;
 }
 .mobile-menu button {
     margin-top: 10px;
